--- a/.github/workflows/fresh-commit.yml
+++ b/.github/workflows/fresh-commit.yml
@@ -1,12 +1,14 @@
 name: Fresh Commit
 on: workflow_dispatch
 
+permissions: write-all
+
 jobs:
     commit:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: ./
+            - uses: lazuee/github-fresh-commit@1.0.2
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   branch: "${{ github.ref }}"
