--- a/.github/workflows/fresh-commit.yml
+++ b/.github/workflows/fresh-commit.yml
@@ -8,7 +8,9 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
-            - uses: lazuee/github-fresh-commit@1.0.2
+            - uses: lazuee/github-fresh-commit@1.0.3
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   branch: "${{ github.ref }}"
+                  # Uncomment below to custom commit message. (default: latest commit message)
+                  # commit_message: "First commit"
